<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_admin"
    app:startDestination="@id/tableUser">

    <fragment
        android:id="@+id/tableUser"
        android:name="com.example.movieproject.adminfragments.TableUser"
        android:label="@string/menu_tableUser"
        tools:layout="@layout/fragment_table_user" />
    <fragment
        android:id="@+id/tableMovies"
        android:name="com.example.movieproject.adminfragments.TableMovies"
        android:label="@string/menu_tableMovies"
        tools:layout="@layout/fragment_table_movies" />
    <fragment
        android:id="@+id/tableSales"
        android:name="com.example.movieproject.adminfragments.TableSales"
        android:label="@string/menu_tableSales"
        tools:layout="@layout/fragment_table_sales" />
</navigation>